# daft-lib

./: .gitignore  LICENSE  README.md
00.mix/: c_str.copy.cpp  char_to_string.cpp  index_3d.cpp
01.glut&glew/: Makefile
02.sdl2/: Makefile  demowin
02.sdl2/demo-win/: demowin.c
02.sdl2/sdl2-systeminfo/: syswm.cpp
02.sdl2/sdl2_ttf/: showfont.c
02.sdl2/sdl_net/: tcpmultiserver.cpp
03.sdl2&glew/: Makefile
04.sdl2/: Makefile  triangle.c
06.glLoadGen/1.test/: gl_core_2_1.h
06.glLoadGen/2.test/: Makefile_MinGW_Win  appmain.c  gl_core_2_1.c  triangle.v.glsl
08.get_version/: Makefile.l  gl_core_3_3.h  ver_gl.c
09.tutor.triangles/glsl/: triangle.f.glsl
10.tutor_cube/: _info.txt
11.current_dir/: mydir.cpp
12.textured_cube/: _info.txt  appmain.cpp
14.calc/: calc.cpp~
15.out_of_mem/: mem_new.cpp
16.sdl2-examples/: make.sh  syswm
17.atoi/: t0.cpp
21.sdl_log/: env.cmd  tags
23.gui_and_text/: README.txt  gl_com_4_5.cpp  gltext.cpp  shader_utils.cpp
25.src_v.0.0/: main.cpp
26.subcribers/: tst.cpp  tst0.cpp
27.publish_subcrib/: Makefile  pubsub.hpp
28.threads/: Makefile
29.mutex/: Makefile
31.throws_in_out/: Makefile  threads_tst.cpp
32.net_udp/: Makefile  client_udp.cpp  server_udp.cpp  sock.cpp  sock.hpp  sockets.hpp
33.redirect_std_streams/: a.out  buf.cpp
34.by_chars_cin/: a.out  by_chars.cpp  tst.txt
35.my_first_lib/: info.txt
36.cmake_using/: _configure.cmd
40.limit_tests/: arr_lim.cpp
42.vector_auto/: tst.cpp
44.NeHe_ttf/: .cfg.vim  open_env.cmd
44.TEMPLATE.app.GLSL.GLFW/: .vim  Makefile  READ_ME.txt  main.cpp  tools.cpp  tools.hpp
45.libpng/: open_env.cmd
48.Geom_Shader_released/: .vim  CMakeLists.txt  info.txt
48.Geom_Shader_released/include/: main.hpp  t256x256.hpp  win_glfw.hpp
48.Geom_Shader_released/lib/: .vim
48.Geom_Shader_released/src/: config.cpp  io.cpp  vbo.cpp  win_glfw.cpp
53.ref_to_class_method/: main.cpp
54.ray_picking/: Makefile  glRenderer.h  main.cpp  raypicking.frag
56.multitexture/: Makefile
58.Ms-examples/: emacsrun.cpp  ex1.cpp  ex3.cpp  info.txt
60.sqlite.class/: CMakeLists.txt  main.cpp  sqlite3w.cpp
61.any/: main.cpp
63.ncurses/: Makefile  trcons.cpp  trconsole.cpp
Geom_Shader_released/: bake.cmd
Ms-examples/: ex2.cpp
OpenGL/ImGui_tst/: .vim  CMakeLists.txt  gl_console.cpp  gl_console.hpp  glfw.cmake  triangle.cpp
OpenGL/ImGui_tst/.extlibs/: info.txt
OpenGL/ImGui_tst/.extlibs/glcore33/: CMakeLists.txt  README
OpenGL/ImGui_tst/.extlibs/include/: glad.c
OpenGL/ImGui_tst/.extlibs/include/glad/: glad.h
OpenGL/Textured_Geom-Shader/: CMakeLists.txt  Makefile.win  app  main.cpp  tools.cpp  tools.hpp
OpenGL/Textured_Geom-Shader/assets/: frag.glsl  geom.glsl  vert.glsl
OpenGL/Textured_Geom-Shader/src/: io.cpp  io.hpp  main.cpp  tools.cpp  tools.hpp
OpenGL/VAO.GLGL.330/GLGSL.3.3_core/: .vim  CMakeLists.txt  Makefile  gl_core_3_3.cpp  main.cpp
OpenGL/VAO.GLGL.45/GLSL.4.5_VAO/: CMakeLists.txt  Makefile  glfw_win.cpp  glfw_win.hpp  main.hpp  mswin.make
OpenGL/glfw.glad.opengl.3.2.core/: CMakeLists.txt
OpenGL/render_in_buff/: CMakeLists.txt  Makefile  Makefile_BASE_1827  Makefile_LOCAL_1713  Makefile_REMOTE_1827  main.cpp  simple
OpenGL/render_in_buff/glsl/: buff_frag.glsl  buff_vert.glsl  main_frag.glsl  main_vert.glsl  vert.glsl
OpenGL/show_opengl_ver/: CMakeLists.txt  app.cpp  gl_com_4_5.c  gl_com_4_5.h  glfw.cmake
OpenGL/text_ttf/freetype2/: CMakeLists.txt  main.cpp  simple.cpp  wft2.cpp  wft2.hpp  win.cpp
OpenGL/text_ttf/stb_truetype/: CMakeLists.txt  shaders.h  simple.cpp
OpenSceneGraph/: osg-tst.cpp  tst
Space_3D_coord/: rigs.cpp
TEMPLATE.Makefile/: Makefile  READ_ME.txt
Textured_Geom-Shader/: READ_ME.txt
by_chars_cin/: url.txt
cmake_using/: CMakeLists.txt
cmake_using/src/: .cfg.vim  main.cpp
console_apps/: keys  libedit.txt  ncurses_stl.cpp
console_apps/ncurses/tst_utf-8/: CMakeLists.txt  main.cpp  ncurses_tty.cpp  ncurses_tty.hpp
display_modes/: Print_display_modes.txt
fast_inv_sqrt/: main.cpp
first-3d-app/instatces_tests/3.gl_triangle_strip/: CMakeLists.txt
glut&glew/: triangle.c
gui_samples/allegro/: CMakeLists.txt  README.txt  main.cpp
gui_samples/gtkmm/: CMakeLists.txt  main.cpp
gui_samples/nana.hello/: .vim  CMakeLists.txt  main.cpp
gui_samples/nuklear/: CMakeLists.txt  main.cpp
gui_samples/nuklear/nuklear/: nuklear.h  nuklear_glfw_gl3.h
gui_window_samples/allegro/: CMakeLists.txt  main.cpp
image_flip_vertical/: tst_flip.cpp
lib.OpenSceneGraph/: osg-tst.cpp
lib.glfw/glfwSetCharCallback/: .vim  CMakeLists.txt  ReadMe.txt  glfw_win.cpp  main.cpp
lib.gtkmm/: template_src.tgz
lib.gtkmm/gtk_win_demo/: CMakeLists.txt  appwin.cpp  appwin.hpp
lib.gtkmm/radio.btns/: CMakeLists.txt  main.cpp
lib.png/: .cfg.vim  Makefile  open_env.cmd
lib.sqlite/: CMakeLists.txt  main.cpp  main.hpp  sqlite3.h  sqlite3w.cpp  sqlite3w.hpp
libpng/: Makefile
libs-testing/: info.txt
limit_tests/: arr_lim.cpp
logs/: filelog.cpp  log.txt
maps.key/: map_3d_key.cpp
mix/: POSIX_signals.cpp  _file_read.cpp  arr_limit_test.cpp  best_practice.md  calc.cpp  char_to_string.cpp  index_3d.cpp  m  map_&_3dkey.cpp  pause.cpp  pause.cpp.orig  show_current_dir.cpp  std-set_new_handler.cpp  str_separator.cpp  tst_bytes.cpp  tst_modf.cpp  tst_std_any.cpp  tst_std_crono.cpp  u  write_log_file.cpp
multitexture/: tools.hpp
network/enet/: CMakeLists.txt  README.md  ctrl.cpp  enetw.cpp  enetw.hpp  server.cpp
network/enet/.extlibs/: clone.from.git.txt
network/libuv/: CMakeLists.txt  server.cpp
pointers/: app.cpp
ray_picking/: raypicking.vert
ref_to_class_method/: main.cpp
sample.Makefile/: READ_ME.txt
sample.create_lib/: info.txt  ms-win.txt
shader_with_sun/: src.tgz
sqlite.class/: sqlite3w.hpp
std_crono/: main.cpp
strings/: 2tst.c
terminal-&-cosole/: keys.c
terminal-&-cosole/ncurses/: CMakeLists.txt  trcons.cpp  trcons.cpp.autosave
threads/: atomics.cpp  catch_async.cpp  sample_class_thread.cpp  threads.cpp
using_Makefile/: .cfg.vim
using_cmake/: CMakeLists.txt  _configure.cmd
(+642 files in other folders)
